--- a/app/src/main/res/layout/fragment_app_intro.xml
+++ b/app/src/main/res/layout/fragment_app_intro.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".FragmentAppIntro">
+        tools:context=".ui.FragmentAppIntro">
 
         <TextView
             android:id="@+id/app_intro_sub_header"
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/welcome_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -31,15 +31,25 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/app_hero_image"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:src="@drawable/ic_quiz_app_intro_hero"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintBottom_toTopOf="@+id/welcome_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="32dp"
+            android:indeterminate="true"
+            app:layout_constraintEnd_toEndOf="@+id/app_intro_sub_header"
+            app:layout_constraintStart_toStartOf="@+id/app_intro_sub_header"
+            app:layout_constraintTop_toBottomOf="@+id/app_intro_sub_header" />
 
         <Button
             android:id="@+id/btn_get_started"
@@ -48,9 +58,10 @@
             android:layout_marginTop="32dp"
             android:background="@drawable/btn_primary"
             android:text="Get Started"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/app_intro_sub_header"
             app:layout_constraintStart_toStartOf="@+id/app_intro_sub_header"
-            app:layout_constraintTop_toBottomOf="@+id/app_intro_sub_header" />
+            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
         <ImageView
             android:layout_width="0dp"
