--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -7,17 +7,54 @@
 
     <fragment
         android:id="@+id/appIntroFragment"
-        android:name="com.sdevprem.dailyquiz.FragmentAppIntro"
+        android:name="com.sdevprem.dailyquiz.ui.FragmentAppIntro"
         android:label="fragment_app_intro"
-        tools:layout="@layout/fragment_app_intro" />
+        tools:layout="@layout/fragment_app_intro" >
+        <action
+            android:id="@+id/action_appIntroFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true" />
+        <action
+            android:id="@+id/action_appIntroFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/appIntroFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.sdevprem.dailyquiz.LoginFragment"
+        android:name="com.sdevprem.dailyquiz.ui.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/appIntroFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/appIntroFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.sdevprem.dailyquiz.SignUpFragment"
+        android:name="com.sdevprem.dailyquiz.ui.SignUpFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" />
+        tools:layout="@layout/fragment_sign_up" >
+        <action
+            android:id="@+id/action_signUpFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/appIntroFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_signUpFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/appIntroFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.sdevprem.dailyquiz.ui.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
