--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,7 @@
         tools:context=".ui.LoginFragment">
 
         <LinearLayout
+            android:id="@+id/form_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
@@ -44,6 +45,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
+                    android:inputType="textEmailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -57,6 +59,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -81,7 +84,16 @@
                 android:text="Don't have an account? Signup" />
 
         </LinearLayout>
-
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progress_bar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/form_container" />
         <ImageView
             android:id="@+id/bottom_img"
             android:layout_width="0dp"
