--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -55,6 +55,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.sdevprem.dailyquiz.ui.HomeFragment"
-        android:label="fragment_home"
+        android:label="Daily Quiz"
         tools:layout="@layout/fragment_home" />
 </navigation>
