--- a/app/src/main/res/layout/fragment_app_intro.xml
+++ b/app/src/main/res/layout/fragment_app_intro.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.FragmentAppIntro">
+        tools:context=".ui.onbaording.FragmentAppIntro">
 
         <TextView
             android:id="@+id/app_intro_sub_header"
