--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".ui.LoginFragment">
+        tools:context=".ui.onbaording.LoginFragment">
 
         <LinearLayout
             android:id="@+id/form_container"
