--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        tools:context=".ui.QuestionFragment">
+        tools:context=".ui.question.QuestionFragment">
 
         <TextView
             android:id="@+id/question"
