--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -58,16 +58,33 @@
         android:label="Daily Quiz"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_homeFragment_to_questionFragment"
-            app:destination="@id/questionFragment" />
+            android:id="@+id/action_homeFragment_to_question_nav"
+            app:destination="@id/question_nav" />
     </fragment>
-    <fragment
-        android:id="@+id/questionFragment"
-        android:name="com.sdevprem.dailyquiz.ui.question.QuestionFragment"
-        android:label="fragment_question"
-        tools:layout="@layout/fragment_question">
+    <navigation
+        android:id="@+id/question_nav"
+        app:startDestination="@id/questionFragment">
         <argument
             android:name="quiz_id"
             app:argType="string" />
-    </fragment>
+        <fragment
+            android:id="@+id/questionFragment"
+            android:name="com.sdevprem.dailyquiz.ui.question.QuestionFragment"
+            android:label="fragment_question"
+            tools:layout="@layout/fragment_question">
+            <argument
+                android:name="quiz_id"
+                app:argType="string" />
+            <action
+                android:id="@+id/action_questionFragment_to_quizResultFragment"
+                app:destination="@id/quizResultFragment"
+                app:popUpTo="@id/questionFragment"
+                app:popUpToInclusive="true" />
+        </fragment>
+        <fragment
+            android:id="@+id/quizResultFragment"
+            android:name="com.sdevprem.dailyquiz.QuizResultFragment"
+            android:label="fragment_quiz_result"
+            tools:layout="@layout/fragment_quiz_result" />
+    </navigation>
 </navigation>
