--- a/app/src/main/res/layout/fragment_quiz_result.xml
+++ b/app/src/main/res/layout/fragment_quiz_result.xml
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".QuizResultFragment">
+        tools:context=".ui.quiz_result.QuizResultFragment"
+        android:orientation="vertical">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:background="?attr/colorTertiaryContainer">
 
-    </FrameLayout>
+            <ImageView
+                android:layout_width="148dp"
+                android:layout_height="148dp"
+                android:layout_margin="16dp"
+                app:tint="?attr/colorOnTertiaryContainer"
+                app:srcCompat="@drawable/ic_icon_trophy" />
+
+            <TextView
+                android:id="@+id/user_score"
+                android:textAppearance="?attr/textAppearanceTitleLarge"
+                android:layout_width="wrap_content"
+                android:textColor="?attr/colorOnTertiaryContainer"
+                android:layout_height="wrap_content"
+                android:text="Your score : 50" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:textAppearance="?attr/textAppearanceHeadlineSmall"
+            android:text="Your Answers" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/user_answer_list"
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            tools:listitem="@layout/quiz_result_answer_list_item" />
+
+        <Button
+            android:id="@+id/home_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginVertical="8dp"
+            android:text="Explore More Quiz" />
+    </LinearLayout>
 </layout>
