--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_container"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
+        tools:backgroundTint="#3EB9DF"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp"
             >
+
             <ImageView
                 android:id="@+id/quiz_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                tools:src="@drawable/logo"
+                tools:src="@drawable/ic_icon_2"
                 android:layout_gravity="center_horizontal"
-                />
+                app:tint="#fff" />
             <TextView
                 android:id="@+id/quiz_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
                 tools:text="Quiz Title"
+                android:textColor="#fff"
                 android:layout_marginTop="8dp"
                 android:layout_gravity="center_horizontal"
                 />
