--- a/app/src/main/res/layout/fragment_quiz_result.xml
+++ b/app/src/main/res/layout/fragment_quiz_result.xml
@@ -34,6 +34,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/user_answers_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -49,12 +50,28 @@
             android:layout_weight="1"
             tools:listitem="@layout/quiz_result_answer_list_item" />
 
-        <Button
-            android:id="@+id/home_btn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginVertical="8dp"
-            android:text="Explore More Quiz" />
+            android:layout_marginHorizontal="16dp">
+
+            <Button
+                android:id="@+id/home_btn"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Explore More Quiz" />
+
+            <Button
+                android:id="@+id/retry_btn"
+                android:layout_marginStart="16dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Retry" />
+        </LinearLayout>
     </LinearLayout>
 </layout>
